Fix robocode JvmArgs